--- a/templates/index.html
+++ b/templates/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html>
+<!--From https://codepen.io/frytyler/pen/EGdtg-->
 
 <head>
-    <meta charset="UTF-8">
-    <title>Deployment Tutorial 1</title>
-    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <!-- <link rel="stylesheet" href="style.css"> -->
+  <meta charset="UTF-8">
+  <title>ML API</title>
+  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+
 </head>
 
-<body style="background: #000;">
-    <div class="login">
-        <h1>Sales Forecasting</h1>
+<body>
+  <div class="login">
+    <h1>Predict Analysis</h1>
 
-        <!-- Main Input For Receiving Query to our ML -->
-        <form action="{{ url_for('predict')}}" method="post">
-            <input type="text" name="rate" placeholder="rate" required="required" />
-            <input type="text" name="sales in first month" placeholder="sales in first month" required="required" />
-            <input type="text" name="sales in second month" placeholder="sales in second month" required="required" />
-            <button type="submit" class="btn btn-primary btn-block btn-large">Predict sales in third month</button>
-        </form>
+    <!-- Main Input For Receiving Query to our ML -->
+    <form action="{{ url_for('predict')}}" method="post">
+      <input type="text" name="date_block_num" placeholder="date_block_num" required="required" />
+      <input type="text" name="shop_id" placeholder="shop_id" required="required" />
+      <input type="text" name="item_id" placeholder="item_id" required="required" />
 
-        <br>
-        <br>
-        {{ prediction_text }}
+      <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
+    </form>
 
-    </div>
+    <br>
+    <br>
+    {{ prediction_text }}
+
+  </div>
+
+
 </body>
 
 </html>
